# tranchW

./: README.md  pyproject.toml
config/: example.aggregator.dex_jup_gmgn.yml  example.bot_http_live_mvp.yml  example.dex_jup_gmgn.yml  example.http.yml  example.replay.yml
docs/: aggregator_http_service.md  dex_jup_gmgn_live_provider.md  normalized_snapshot_schema.md
rules/: sol_meme_runner_live_mvp_dex_jup_gmgn.json  sol_meme_runner_live_mvp_dex_jup_gmgn.yaml  sol_meme_runner_ruleset_v1_1.json  sol_meme_runner_ruleset_v1_1.yaml
sample_data/: reject_snapshot.jsonl  sample_snapshots.jsonl
src/sol_runner_alert_bot.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/sol_runner_bot/: __init__.py  aggregator.py  app.py  bot.py  config.py  dispatcher.py  evaluator.py  models.py  rules_loader.py  state_store.py
src/sol_runner_bot/notifiers/: __init__.py  console.py  telegram.py  webhook.py
src/sol_runner_bot/providers/: __init__.py  base.py  dex_jup_gmgn_mvp.py  file_replay.py  http_metrics.py
tests/: test_aggregator.py  test_bot.py  test_live_mvp_provider.py
